[package]
name = "codex-api-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { version = "^0", default-features = false, optional = true }
codex-api-types = { version = "^0.1", path = "../codex-api-types", default-features = false }
http = { version = "^1", default-features = false }
serde = { version = "^1", default-features = false, features = ["derive"] }
uuid = { version = "^1", default-features = false, features = ["serde", "v4"] }
wasm-not-send-sync = { version = "^0", optional = true }

[features]
sync = []
async = ["dep:wasm-not-send-sync"]
boxed = ["async", "dep:async-trait"]
