[package]
name = "codex-api-types"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "^0", default-features = false }
schemars = { version = "^1", optional = true, default-features = false, features = ["chrono04", "derive", "std", "url2", "uuid1"] }
serde = { version = "^1", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "^1", default-features = false }
ts-rs = { version = "^12", optional = true, default-features = false, features = ["chrono-impl", "serde-compat", "serde-json-impl", "url-impl", "uuid-impl"] }
url = { version = "^2", default-features = false }
uuid = { version = "^1", default-features = false, features = ["std", "v4", "v7"] }
wasm-bindgen = { version = "^0", optional = true, default-features = false, features = ["serde", "serde_json", "std"] }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]
schemars = ["serde", "dep:schemars"]
ts = ["dep:ts-rs"]
serde = ["dep:serde", "url/serde", "uuid/serde", "chrono/serde"]
js = ["dep:wasm-bindgen", "uuid/js", "chrono/wasm-bindgen"]

[dev-dependencies]
serde_json = "1.0.150"
